# split_fastq_umi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
src/: BarcodeGroupLoader.cpp  BarcodeGroupLoader.h  BarcodeMatcher.cpp  BarcodeMatcher.cpp.bak  BarcodeMatcher.h  ProducerConsumer.cpp  ProducerConsumer.h  ReadPair.h  SPSCQueue.h  SampleConfigLoader.cpp  SampleConfigLoader.h  Statistics.h  Utils.cpp  Utils.h  main.cpp  util.h  writer.cpp  writer.h
testdata/: barcodes.empty.conf  run.sh  sample.empty.conf  sample.example.conf
